# SNOMOR

./: AUTHORS  LINKS  README.md  paths_demo.sh
Extract-OSM/: extract.js
Extract-OSM-master/: README.md  package.json
Paths/: demo_montreal.sh
Paths-main/: Cargo.toml
Paths-main/src/: gj.rs
Paths/demo/montreal/: drones.geojson  drones.json  drones.meta.yaml  drones.paths.json  plow.lrive.sidewalks.json  plow.meta.yaml  snow.lrive.geojson  stats.txt  vehicles.json  viz.roads.geojson
Paths/demo/montreal/previous_results/: drones.paths.0.geojson  drones.paths.2.geojson  drones.paths.3.geojson  drones.paths.5.geojson  drones.paths.6.geojson  drones.paths.7.geojson  plow.lrive.roads.1.geojson  plow.lrive.roads.4.geojson  plow.lrive.roads.6.geojson  plow.lrive.roads.7.geojson  plow.lrive.roads.8.geojson  plow.lrive.roads.9.geojson  plow.lrive.sidewalks.1.geojson  plow.lrive.sidewalks.5.geojson  plow.lrive.sidewalks.6.geojson  plow.lrive.sidewalks.7.geojson  plow.lrive.sidewalks.8.geojson  plow.lrive.sidewalks.9.geojson
Paths/src/: main.rs  meta.rs  plow.rs
Real_case/Extract-OSM/: .gitignore  package-lock.json
Real_case/Paths/: README.md
Real_case/Paths/demo/montreal/: drones.json  drones.meta.yaml  plow.lrive.roads.json  plow.meta.yaml  roads.geojson  snow.lrive.geojson  snow.lrive.json  stats.txt  vehicles.json
Real_case/Paths/demo/montreal/previous_results/: drones.paths.1.geojson  drones.paths.4.geojson  drones.paths.8.geojson  drones.paths.9.geojson  plow.lrive.roads.0.geojson  (+7 more)
Real_case/Paths/src/: data.rs  graph.rs
Theory case/: brrr.py
