[package]
name = "wfbfa-solver-cli"
version = "0.1.0"
edition = "2018"
description = "Universal CLI for solving flight & plow problems, as well as converting spec'd data to/from GeoJSON"
repository = "https://github.com/WFBFA/Paths"
license = "MIT"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "^0.8"
indexmap = "^1.6"
priority-queue = "^1.1"
itertools = "^0.10"
rand = "^0.8"
noisy_float = { version = "0.2.0", features = ["serde"] }
geojson = { version = "^0.22", features = ["geo-types"] }
geo = "^0.18"
clap = "^2.33"
try_all = "0.0.2"
log = "^0.4"
env_logger = "^0.8"
